--- a/pom.xml
+++ b/pom.xml
@@ -87,17 +87,18 @@
 <!-- https://mvnrepository.com/artifact/com.google.appengine/appengine-maven-plugin -->
 
 			<plugin>
-				<groupId>com.google.appengine</groupId>
+				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>appengine-maven-plugin</artifactId>
-				<version>1.9.59</version>
+				<version>1.3.2</version>
 				<configuration>
 					<port>8089</port>
 					<address>0.0.0.0</address>
 					<deploy.stopPreviousVersion>true</deploy.stopPreviousVersion>
-					 <jvmFlags>
-					 	<jvmFlag>-Xdebug</jvmFlag>
-                        <jvmFlag>-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag>
-                    </jvmFlags>
+					<jvmFlags>
+            			<jvmFlag>-Xdebug</jvmFlag>
+            			<jvmFlag>-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</jvmFlag>
+        			</jvmFlags>
+        			<disableUpdateCheck>true</disableUpdateCheck>
 				</configuration>
 			</plugin>
 
