--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,7 +59,7 @@ spring.data.mongodb.repositories.enabled=true
 
 ##### security config #######
 
-security.user.password=password
+#security.user.password=password
 
 security.oauth2.resource.filter-order=3
 
@@ -73,3 +73,7 @@ security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=testjwtresourceid
+
+
+spring.resources.static-locations=classpath:/static/src/
+
