this set contains: (1) profile-specific property file (2) MaterialUI theme and styling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@
 # Specify the handlers to create in the root logger
 # (all loggers are children of the root logger)
 # The following creates the console handler
+spring.profiles.active=dev
+
 handlers = java.util.logging.ConsoleHandler
 
 # Set the default logging level for the root logger
@@ -55,7 +57,7 @@ com.google.appengine.tools.development.DevAppServerImpl.level=INFO
 #spring.data.mongodb.port=27017
 spring.data.mongodb.repositories.enabled=true
 #spring.data.mongodb.uri=mongodb://merealator:merealator@localhost:27017/merealatordb?authSource=merealatordb
-
+#spring.data.mongodb.uri=mongodb://merealtor:merealtor$fR2$3@ds143907.mlab.com:43907/merealtordb
 
 ##### security config #######
 
@@ -76,4 +78,3 @@ security.jwt.resource-ids=testjwtresourceid
 
 
 spring.resources.static-locations=classpath:/static/src/
-
