--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,8 @@
                 <includes>
                     <include>static/src/**</include>
                     <include>application.properties</include>
+                    <include>application-dev.properties</include>
+                    <include>application-prod.properties</include>
                 </includes>
             </resource>
          </resources>
