--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./webpack.config.js",
   "dependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.0",
     "babel-plugin-add-module-exports": "^0.1.2",
@@ -13,17 +14,22 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "css-loader": "^0.28.9",
     "flux": "^3.1.3",
+    "history": "^4.7.2",
+    "material-ui": "^1.0.0-beta.30",
+    "radium": "^0.21.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
-    "history": "^4.7.2",
-    "webpack": "^1.12.9",
-    "webpack-dev-server": "^1.14.1"
+    "style-loader": "^0.20.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "webpack-dev-server --host 0.0.0.0 --port 8084 --display-error-details --content-base src --inline --hot"
+    "dev": "webpack-dev-server --host 0.0.0.0 --port 8084 --client-log-level error --content-base src --inline --hot"
   },
   "author": "",
   "license": "ISC"
