--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@
 # Specify the handlers to create in the root logger
 # (all loggers are children of the root logger)
 # The following creates the console handler
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 handlers = java.util.logging.ConsoleHandler
 
