--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -18,11 +18,15 @@
     "flux": "^3.1.3",
     "history": "^4.7.2",
     "material-ui": "^1.0.0-beta.30",
+    "qs": "^6.5.1",
     "radium": "^0.21.2",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.20.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
